--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,6 @@ navbar-links:
 avatar: "/assets/images/avatar-icon.png"
 round-avatar: true
 
-#page-img: "/assets/images/background-nyc2.png"
-#navbar-img: "/assets/images/background-nyc2.png"
-#footer-img: "/assets/img/bgimage.png"
 
 page-col: "#FFFFFF"
 text-col: "#404040"
@@ -35,7 +32,7 @@ link-col: "#008AFF"
 hover-col: "#0085A1"
 navbar-col: "#EAEAEA"
 navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
+navbar-border-col: "#152538"
 footer-col: "#EAEAEA"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
